<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/header_tle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/header_size"
                android:textStyle="bold"
                android:visibility="visible" />

        </RelativeLayout>

    </LinearLayout>


    <EditText
        android:id="@+id/search_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_box"
        android:drawableStart="@drawable/ic_baseline_search"
        android:enabled="true"
        android:focusable="true"
        android:hint="@string/search_by_name"
        android:imeOptions="actionDone"
        android:layout_margin="@dimen/margin_8"
        android:padding="@dimen/margin_8"
        android:singleLine="true"
        android:textSize="12sp">

    </EditText>
    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="match_parent"
            android:indeterminateTint="@color/app_color"
            android:layout_height="wrap_content">
        </ProgressBar>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/header_size"
            android:text="@string/no_data">
        </TextView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/employee_list"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>